--- a/ControlFirmaElectronica/ControlFirmaElectronica.csproj
+++ b/ControlFirmaElectronica/ControlFirmaElectronica.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ControlFirmaElectronica</RootNamespace>
     <AssemblyName>ControlFirmaElectronica</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -52,31 +52,34 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AccesoDatos, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\AccesoDatos.dll</HintPath>
+    <Reference Include="AccesoDatos">
+      <HintPath>..\..\FirmaTradicionales\ControlFirmaElectronica\bin\Debug\AccesoDatos.dll</HintPath>
     </Reference>
     <Reference Include="AxInterop.SeguriSIGNP, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\AxInterop.SeguriSIGNP.dll</HintPath>
+      <HintPath>..\..\..\BancoMedios2019\BancoMedios\bin\AxInterop.SeguriSIGNP.dll</HintPath>
     </Reference>
     <Reference Include="GZipEncoder">
-      <HintPath>..\..\DLLS\GZipEncoder.dll</HintPath>
+      <HintPath>C:\inetpub\wwwroot\ServicioGestionMercantil\Bin\GZipEncoder.dll</HintPath>
     </Reference>
     <Reference Include="Interop.SeguriSIGNP, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>True</EmbedInteropTypes>
-      <HintPath>bin\Debug\Interop.SeguriSIGNP.dll</HintPath>
+      <HintPath>..\..\FirmaTradicionales\ControlFirmaElectronica\bin\Debug\Interop.SeguriSIGNP.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Office.Interop.Word, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\Microsoft.Office.Interop.Word.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=5.2.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\MySql.Data.dll</HintPath>
+      <HintPath>..\..\FirmaTradicionales\ControlFirmaElectronica\bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PdfMetamorphosis">
-      <HintPath>..\..\DLLS\PdfMetamorphosis.dll</HintPath>
+      <HintPath>..\..\FirmaTradicionales\ControlFirmaElectronica\bin\Debug\PdfMetamorphosis.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -85,9 +88,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Net.Http.dll</HintPath>
     </Reference>
-    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\Versionador Kraken\FirmaTradicionales\ControlFirmaElectronica\bin\Debug\System.Net.Http.Formatting.dll</HintPath>
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -152,6 +154,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
